--- a/app/src/main/res/layout/fragment_service_detail.xml
+++ b/app/src/main/res/layout/fragment_service_detail.xml
@@ -158,7 +158,7 @@
 
                     </LinearLayout>
 
-                    <Switch
+                    <androidx.appcompat.widget.SwitchCompat
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:id="@+id/switchStat"
