--- a/app/src/main/res/menu/list.xml
+++ b/app/src/main/res/menu/list.xml
@@ -7,18 +7,18 @@
     <item android:id="@+id/action_search"
         android:title="@string/action_search"
         android:icon="@drawable/ic_action_search"
-        android:showAsAction="ifRoom|collapseActionView"
-        android:actionViewClass="android.widget.SearchView" />
+        app:actionViewClass="android.widget.SearchView"
+        app:showAsAction="ifRoom|collapseActionView" />
 
     <item android:id="@+id/action_new_custom"
         android:title="@string/action_new_custom_item"
         android:icon="@drawable/ic_action_view_as_list"
-        android:showAsAction="ifRoom|collapseActionView" />
+        app:showAsAction="ifRoom|collapseActionView" />
 
     <item android:id="@+id/action_sort"
         android:icon="@drawable/ic_action_sort_by_size"
         android:title="@string/action_sort_by_count"
-        android:showAsAction="always" />
+        app:showAsAction="always" />
 
 
 
